test/trivial/roxana/test_param_decl3.good
Error: No initializer for parameter (test_param_decl3.chpl:1)
